--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 #root {
   max-width: 1260px;
   margin: 0 auto;
+  /* text-align: center; */
 }
+
 /* .logo {
   height: 6em;
   padding: 1.5em;
@@ -128,4 +130,18 @@ body {
   100% {
     opacity: 1;
   }
+}
+
+/* Add this to your existing App.css or create a new VehiclePolicyDetails.css */
+.blue-button {
+  background-color: blue;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.blue-button:hover {
+  background-color: darkblue;
 }
